// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV juGRYM"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV cuMTxf"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV gEYQhx"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV gpRvvW"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV iWauIt"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV hofNlT"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV juGRYM"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV cuMTxf"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV gEYQhx"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV juGRYM"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV cuMTxf"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV gEYQhx"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV juGRYM"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV cuMTxf"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV gEYQhx"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
      dir="rtl"
    >
      medium
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV juGRYM"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-bgA-dc byrdGm"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
      dir="rtl"
    >
      large
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV cuMTxf"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-bgA-dc byrdGm"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV gEYQhx"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-cmvVVv bXkXQL"
      >
        xlarge
      </label>
      <div
        className="sc-bgA-dc byrdGm"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV juGRYM"
        placeholder="medium"
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV cuMTxf"
        placeholder="large"
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV kDTjMs"
        placeholder="xlarge"
        type="password"
      />
      <label
        className="sc-cmvVVv keWJSg"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV eKtrQv"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <div
      className="sc-fduepK fBjfRu"
    >
      <input
        className="sc-joKenV bTTCpg"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK bLHNyM"
    >
      <input
        className="sc-joKenV gEYQhx"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
      <div
        className="sc-bgA-dc eDsYOh"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
